# ddb

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.gradle.kts  build.rs  manifest.yaml  settings.gradle.kts
.github/workflows/: ci.yml  publish.yml
agent/: build.gradle.kts
agent/agent/: build.gradle.kts
agent/gradle/: libs.versions.toml
docs/: README.md  semantic-agent.md
docs/adr/: ADR-001-idle-barrier-over-polling.md  ADR-002-process-level-kill.md  ADR-003-pre-parse-interpolation.md
e2e/: CHANGELOG.md  README.md  fixtures.yaml
e2e/demo-app/: init.gradle.kts  settings.gradle.kts
e2e/demo-app-xml/: init.gradle.kts  settings.gradle.kts
e2e/recipes/: login.yaml  logout.yaml
e2e/scripts/: regress-android.sh
e2e/tests/: t10.yaml  t15.yaml  t16-negative.yaml  t16.yaml  t19.yaml  t22.yaml  t23.yaml  (+11 more)
e2e/tests-xml/: README.md  t1.yaml  t10.yaml  t11.yaml  t12.yaml  t13.yaml  t14.yaml  t15.yaml  t16-negative.yaml  t16.yaml  t17.yaml  t18.yaml  t19.yaml  t2.yaml  t20.yaml  t21.yaml  t22.yaml  t23.yaml  t24.yaml  t25.yaml  t26.yaml  t27.yaml  t3.yaml  t31.yaml  t32.yaml  t33.yaml  t34.yaml  t35.yaml  t37.yaml  t4.yaml  t5.yaml  t6.yaml  t7.yaml  t8.yaml  t9.yaml
scripts/: check-guards.sh  regress-android.sh
src/: adb.rs  agent_yaml.rs  catalogue.rs  config.rs  debug.rs  install_check.rs  lib.rs  main.rs  registry.rs  subprocess.rs  ui_parser.rs
tests/: parser_corpus.rs  t1.yaml  t11.yaml  t12.yaml  t13.yaml  t14.yaml  t17.yaml  t18.yaml  t2.yaml  t20.yaml  t21.yaml  t24.yaml  t3.yaml  t4.yaml  t5.yaml  t6.yaml  t7.yaml
(+342 files in other folders)
